--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/full_map.webp
+/full_map.svg
+/DPT.lev_2_m_above_ground.01.webp
